# codereviewer_ia

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
.github/worflows/: reviewer.yml
.github/workflows/: reviewer.yml
notebooks/: test_deepseekclient.ipynb  test_git_client.ipynb  test_reviewer.ipynb
src/core/: deepseek_client.py  discord_bot.py  git_client.py  linter.py  reviewer.py
